# panthera

./: .coverage  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
demo/input/: demo_isolate.tsv  demo_survey.tsv  demo_survey.vcf
demo/output/isolate/: demo_isolate_isolate_results.tsv
demo/output/survey_tsv/: demo_survey_tsv_survey_results.tsv
demo/output/survey_vcf/: demo_survey_vcf_survey_results.tsv
docs/: mcp.md  prepare_phased_vcf.md
src/panthera/: api.py  mcp_server.py
src/panthera.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/panthera/core/: __main__.py  blocks.py  extend_phaseset.py  input.py  io.py  mutation.py  onehotencoder.py  orchestrator.py  parse_genome.py  runtime.py  split.py  split_by_haplotype.py
src/panthera/core/bio/: blocks.py  extend_phaseset.py  gene.py  io.py  mutation.py  parse_bg_vcf.py  parse_genome.py  split_by_haplotype.py  wig.py
src/panthera/core/ml/: load_model.py
src/panthera/core/pipelines/: isolate.py  query_fasta.py  query_genomic_range.py  survey.py
src/panthera/core/splice_site_ml/: predict_ss.py
src/panthera/core/ssp/: calc_delta.py  load_model.py  model_paths.py  onehotencoder.py  predict.py  ssp_manager.py
src/panthera/models/: modelp.pb
src/panthera/utils/: constants.py  exceptions.py  get_unique_df.py  logging_config.py  runtime.py
tests/integration/: test_blocks.py  test_calc_delta_integration.py  test_splice_site_prediction.py  test_ssp_manager_integration.py
tests/unit/: test_api.py  test_bg_vcf_parsing.py  test_cached_predict.py  test_calc_delta_align.py  test_calc_delta_masked_delta.py  test_calc_delta_raw_delta.py  test_extend_phaseset.py  test_extract_seqs.py  test_gene.py  test_get_unique_df.py  test_haplotype_block.py  test_io.py  test_isolate.py  test_load_model.py  test_mutation.py  test_onehotencode.py  test_orchestrator.py  test_parse_genome.py  test_query_fasta.py  test_query_genomic_range.py  test_read_tsv.py  test_read_vcf.py  test_round_array.py  test_runtime.py  test_split_by_haplotype.py  test_ss_predict.py  test_ssp_manager.py  test_wig.py
