[project]
name = "panthera"
version = "0.1.0"
description = "Splice haplotype identification bioinformatics tool."
readme = "README.md"
# Remove 3.12 since TensorFlow 2.15 doesn't support it
requires-python = ">=3.10, <3.12"
dependencies = [
    "click>=8.3.1",
    "cyvcf2>=0.31.4",
    "pandas>=2.3.3",
    "pandera>=0.30.1",
    "pysam>=0.23.3",
    "rich>=14.3.3",
    "ruff>=0.15.6",
    "tensorflow[and-cuda]==2.15.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "spyder>=6.1.3",
]

[tool.pytest.ini_options]
# This tells pytest to look in the 'src' folder for your code
pythonpath = ["src"]
testpaths = ["tests"]
# Optional: adds colors and helpful summary info to pytest output
addopts = "-ra -q"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
# This tells Pyright that 'src' is the root of your source code
executionEnvironments = [
  { root = "src" }
]

[tool.setuptools.packages.find]
# This helps the build system find your package inside the src directory
where = ["src"]
dependencies = [
    "click>=8.3.1",
    "cyvcf2>=0.31.4",
    "pandas>=2.3.3",
    "pandera>=0.30.1",
    "pysam>=0.23.3",
    "rich>=14.3.3",
    "ruff>=0.15.6",
    "tensorflow[and-cuda]==2.15.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "spyder>=6.1.3",
]

[tool.pytest.ini_options]
# This tells pytest to look in the 'src' folder for your code
pythonpath = ["src"]
testpaths = ["tests"]
# Optional: adds colors and helpful summary info to pytest output
addopts = "-ra -q"

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
# This tells Pyright that 'src' is the root of your source code
executionEnvironments = [
  { root = "src" }
]

[tool.setuptools.packages.find]
# This helps the build system find your package inside the src directory
where = ["src"]
