[project]
name = "panthera-splice"
version = "1.0.4"
description = "Splice haplotype identification bioinformatics tool."
readme = "README.md"
# Remove 3.12 since TensorFlow 2.15 doesn't support it
requires-python = ">=3.10, <3.12"
dependencies = [
    "biopython>=1.86",
    "chardet<6.0.0",
    "charset-normalizer<3.4.0",
    "click>=8.3.1",
    "cyvcf2<=0.31.0",
    "intervaltree>=3.1.0",
    "mcp>=1.27.0",
    "pandas>=2.3.3",
    "pandera>=0.30.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pysam>=0.23.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    # Install base TensorFlow on macOS
    "tensorflow==2.15.1; sys_platform == 'darwin'",
    # Install TensorFlow with CUDA extras on Linux/Windows
    "tensorflow[and-cuda]==2.15.1; sys_platform != 'darwin'",
    "tqdm>=4.67.3",
    "urllib3<2.5.0",
]

[project.scripts]
panthera = "panthera.core.__main__:main"

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pyright>=1.1.408",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "spyder>=6.1.3",
]

[tool.setuptools.packages.find]
# This helps the build system find your package inside the src directory
where = ["src"]

[tool.pytest.ini_options]
# This tells pytest to look in the 'src' folder for your code
pythonpath = ["src"]
testpaths = ["tests"]
# Optional: adds colors and helpful summary info to pytest output
addopts = "-ra -q"
markers = [
    "integration: marks tests as integration tests that load real ML models (deselect with '-m \"not integration\"')"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
# This tells Pyright that 'src' is the root of your source code
executionEnvironments = [
  { root = "src" }
]

[tool.setuptools.package-data]
# Include all .pb files within the "models" subdirectory of "panthera"
"panthera.models" = ["*.pb"]
# Include genetic background VCFs
"panthera.data.genetic_background_vcf" = ["*.vcf.gz", "*.vcf.gz.tbi"]

[tool.uv]
package = true

